# readme-generator-agent

./: .env.example  CONTRIBUTING.md  Dockerfile.agent  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-and-push.yml
docs/: index.md  modules.md
readme_generator_agent/: __init__.py  __main__.py  __version__.py  agent_config.json  main.py
readme_generator_agent/skills/readme-generator/: skill.yaml
tests/: test_main.py
